<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ScreenShot:ScreenShot_Makeup</string>
    <string name="ok" tools:ignore="MissingTranslation">OK</string>
    <string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" tools:ignore="MissingTranslation">Stop</string>
    <string name="share" tools:ignore="MissingTranslation">Share</string>
    <string name="record" tools:ignore="MissingTranslation">Record</string>
    <string name="delete" tools:ignore="MissingTranslation">Delete</string>
    <string name="close" tools:ignore="MissingTranslation">Close</string>
    <string name="back" tools:ignore="MissingTranslation">Back</string>
    <string name="edit" tools:ignore="MissingTranslation">Edit</string>
    <string name="capture_button" tools:ignore="MissingTranslation">Showing capture button</string>
    <string name="still" tools:ignore="MissingTranslation">Still</string>
    <string name="video" tools:ignore="MissingTranslation">Video</string>
    <string name="overlay_button_desc" tools:ignore="MissingTranslation">You can move the overlay button by dragging.\nNotice if Android 10+ System Gesture Navigation is enabled, the buttons on the edge may not respond.</string>
    <string name="video_settings_desc" tools:ignore="MissingTranslation">Depending on the settings, capturing may stop because the video compression process can not keep up real time.</string>
    <string name="capture_standby_still" tools:ignore="MissingTranslation">Capture standby (Still)</string>
    <string name="capture_standby_description_still" tools:ignore="MissingTranslation">Showing overlay button on the screen.</string>
    <string name="capture_standby_video" tools:ignore="MissingTranslation">Capture standby (Video)</string>
    <string name="capture_standby_description_video" tools:ignore="MissingTranslation">Showing overlay button on the screen.</string>
    <string name="capture_standby_video_recording" tools:ignore="MissingTranslation">Video capture running</string>
    <string name="capture_standby_description_video_recording" tools:ignore="MissingTranslation">Recording in progress</string>
    <string name="reset_position" tools:ignore="MissingTranslation">Reset position</string>
    <string name="overlay_button_size" tools:ignore="MissingTranslation">Overlay button size \n (unit:dp. restart required)</string>
    <string name="button_size_error" tools:ignore="MissingTranslation"><![CDATA[Please input integer >= 1]]></string>
    <string name="save_folder" tools:ignore="MissingTranslation">Save folder</string>
    <string name="not_selected" tools:ignore="MissingTranslation">Not selected</string>
    <string name="please_allow_overlay_permission" tools:ignore="MissingTranslation">Please allow Overlay permission.\n\nNote: After change setting, please back to this app.</string>
    <string name="please_select_save_folder" tools:ignore="MissingTranslation">Please select save folder.\n\nNote: To show all storage, please open menu on top-right corner, select "show storage", then open menu on top-left corner and select storage.\n\nAlso you can create new folder from menu on top-right corner.</string>
    <string name="still_settings" tools:ignore="MissingTranslation">Still settings</string>
    <string name="video_settings" tools:ignore="MissingTranslation">Video settings</string>
    <string name="other_settings" tools:ignore="MissingTranslation">Other settings</string>
    <string name="show_post_view_after_capture" tools:ignore="MissingTranslation">Show post view after capture</string>
    <string name="save_png" tools:ignore="MissingTranslation">Save as PNG file (very slow)</string>
    <string name="codec" tools:ignore="MissingTranslation">Codec</string>
    <string name="frame_rate" tools:ignore="MissingTranslation">Frame rate</string>
    <string name="bit_rate" tools:ignore="MissingTranslation">Bit rate(bps)</string>
    <string name="video_codec_missing" tools:ignore="MissingTranslation">Video capturing is unavailable because this device has no video codec.</string>
    <string name="media_muxer_too_old" tools:ignore="MissingTranslation">Video capturing is unavailable because this app requires Android 8+ MediaMuxer API.</string>
    <string name="output_log_to_file" tools:ignore="MissingTranslation">Output debug log to file</string>
    <string name="output_log_to_file_desc" tools:ignore="MissingTranslation">If enabled, the debug log is output to the folder %1$s</string>
    <string name="status_is" tools:ignore="MissingTranslation">Status: %1$s</string>
    <string name="status_running" tools:ignore="MissingTranslation">Running</string>
    <string name="stopped_by" tools:ignore="MissingTranslation">Stopped by: %1$s</string>
    <string name="stop_recording" tools:ignore="MissingTranslation">Stop recording</string>
    <string name="trouble_shooting" tools:ignore="MissingTranslation">Trouble shooting</string>
    <string name="exit_reasons" translatable="false">Exit Reasong</string>
    <string name="start_at_device_boot" tools:ignore="MissingTranslation">start at device boot completed</string>
    <string name="label_brush" tools:ignore="MissingTranslation">Brush</string>
    <string name="label_shape" translatable="false">Shape</string>
    <string name="label_oval" translatable="false">Oval</string>
    <string name="label_rectangle" translatable="false">Rectangle</string>
    <string name="label_line" translatable="false">Line</string>
    <string name="label_arrow" translatable="false">Arrow</string>
    <string name="label_emoji" translatable="false">Emoji</string>
    <string name="label_sticker" translatable="false">Sticker</string>
    <string name="label_eraser_mode" translatable="false">Eraser Mode</string>
    <string name="label_text" translatable="false">Text</string>
    <string name="label_filter" translatable="false">Filter</string>
    <string name="msg_save_image" translatable="false">Are you want to exit without saving image ?</string>
    <string name="app_intent_name" translatable="false">PhotoEditor</string>
    <string name="msg_save_image_to_share" translatable="false">Please save image to share</string>
    <string name="msg_share_image" translatable="false">Share Image</string>
    <string name="default_image_tag" translatable="false">default</string>
    <string name="border" translatable="false">border</string>
    <string name="aspect" translatable="false">aspect</string>
    <string name="layout" translatable="false">Layout</string>
    <string name="content_description_layout" translatable="false">Content_description_layout</string>
    <string name="menu_editor">menu_editor</string>
    <string name="action_share" translatable="false">action_share</string>
    <string name="action_save_to_gallery" translatable="false">action_save_to_gallery</string>
    <string name="action_start_over" translatable="false">action_start_over</string>
    <string name="setting" translatable="false">Setting</string>
    <string name="overlay_button_size1" translatable="false">overlay button size</string>
    <string name="uint_dp_restart_required" translatable="false">(uint:dp. restart required)</string>
</resources>